routing/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: prod-web-gw
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: lexical-clash-com
    allowedRoutes:
      namespaces:
        from: Same
