routing/httproute-serveapp.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
  - kind: Gateway
    name: prod-web
    sectionName: https
  hostnames:
  - "lexicalclash.com"
  rules:
  - backendRefs:
    - name: lexical-clash
      port: 3000
